--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -57,7 +57,7 @@
             <ion-row>
               <ion-list>
                 <ion-item>
-                  <ion-toggle slot="start" formControlName="up_ctrl" (ionChange)="onOutletToggleChange('Water Heater', 'up_ctrl')"></ion-toggle>
+                  <ion-toggle slot="start" formControlName="up_ctrl" (click)="onOutletToggleChange('Water Heater', 'up_ctrl')"></ion-toggle>
                   <ion-label>Heater</ion-label>
                 </ion-item>
                 <ion-item>
