--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -1,35 +1,51 @@
 <ion-card class="dashboard-card">
   <ion-card-content>
     <ion-grid>
-      <!--Card Header-->
       <ion-row>
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">Reservoir Control</h3>
+          <h3 fill="clear" class="color">Reservoir</h3>
         </ion-item>
       </ion-row>
-      <!--Card Content-->
       <form [formGroup]="reservoirForm">
         <div *ngIf="isOpen">
         <hr color="grey" />
-          <ion-row>
-            <ion-col size="12">
-              <ion-item>
-                <ion-label position="floating">Reservoir Size</ion-label>
-                <ion-input formControlName="reservoir_size" type="number"></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-  
-          <ion-row>
-            <ion-col size="12">
-              <ion-item>
-                <ion-label position="floating">Water Replacement Schedule</ion-label>
-                <ion-input formControlName="water_replacement_interval" type="number"></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+        <ion-row>
+          <ion-item lines="none">
+            <ion-toggle slot="start" formControlName="is_control"></ion-toggle>
+            <ion-label>Water Replacement Enabled</ion-label>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-item>
+              <ion-label position="floating">Reservoir Size</ion-label>
+              <ion-input formControlName="reservoir_size" type="number"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-item>
+              <ion-label position="floating">Replacement Interval</ion-label>
+              <ion-input formControlName="water_replacement_interval" type="number"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <h3>Power Outlets</h3>
+        <ion-list>
+          <ion-item lines="none">
+            <ion-icon name="return-down-back-outline"></ion-icon>
+            <ion-label>Water In</ion-label>
+            <ion-button slot="end" (click)="presentAddPowerOutletModal('Reservoir Water In')">{{ isPowerOutletSetup('Reservoir Water In')? "Edit": "Setup"}}</ion-button>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-icon name="return-down-back-outline"></ion-icon>
+            <ion-label>Water Out</ion-label>
+            <ion-button slot="end" (click)="presentAddPowerOutletModal('Reservoir Water Out')">{{ isPowerOutletSetup('Reservoir Water Out')? "Edit": "Setup"}}</ion-button>
+          </ion-item>
+        </ion-list>
         </div>
       </form>
     </ion-grid>
