--- a/Automation-App/src/app/components/power-outlet/power-outlet.component.html
+++ b/Automation-App/src/app/components/power-outlet/power-outlet.component.html
@@ -1,4 +1,4 @@
-<ion-item lines="none">
+<ion-item>
   <ion-icon [name]="data.logo"></ion-icon>
   <ion-text style="margin-left: 20px;">{{ data.name }}</ion-text>
   <ion-toggle slot="end" [(ngModel)]="data.currentValue" (click)="onToggleClick()"></ion-toggle>
