local storage added

--- a/Automation-App/src/app/app.component.html
+++ b/Automation-App/src/app/app.component.html
@@ -4,6 +4,9 @@
       <ion-header>
         <ion-toolbar color="primary">
           <ion-title>Hydrotek Farms</ion-title>
+          <ion-button (click)="logout()" fill="clear" size="large" slot="end"> 
+            <ion-icon style="color: white;" name="log-out-outline"></ion-icon>
+          </ion-button>
         </ion-toolbar>
       </ion-header>
      <!--side menu options-->
