Cameras can be fetched and data can be displayed

--- a/Automation-App/src/app/components/camera/camera.component.html
+++ b/Automation-App/src/app/components/camera/camera.component.html
@@ -1,3 +1,8 @@
-<p>
-  camera works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Camera name: {{cameraData.name}}</ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <p>Camera URL: {{cameraData.url}}</p>
+  </ion-card-content>
+</ion-card>
