--- a/Automation-App/src/app/add-camera/add-camera.page.html
+++ b/Automation-App/src/app/add-camera/add-camera.page.html
@@ -2,12 +2,24 @@
   <ion-toolbar color="primary">
     <ion-title>Add Camera</ion-title>
     <ion-buttons slot="end">
-      <ion-button  (click)="this.modalController.dismiss()"><ion-icon name="close"></ion-icon></ion-button>
+      <ion-button  (click)="this.modalCtrl.dismiss()"><ion-icon name="close"></ion-icon></ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<!--ion inputs for name and url - use a form, normal is fine (not dynamic)-->
-<!--save button + validation-->
+  <form [formGroup]="cameraForm" (ngSubmit)="onFormSubmit()">
+    <ion-item>
+      <ion-label position="floating">Camera Name</ion-label>
+      <ion-input formControlName="cam_name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Camera URL</ion-label>
+      <ion-input formControlName="cam_url"></ion-input>
+    </ion-item>
+    <ion-button type="submit" expand="block" fill="clear" shape="round">
+      Submit
+    </ion-button>
+  </form>
+
 </ion-content>
