--- a/Automation-App/src/app/add-camera/add-camera.page.html
+++ b/Automation-App/src/app/add-camera/add-camera.page.html
@@ -20,6 +20,9 @@
     <ion-button type="submit" expand="block" fill="clear" shape="round">
       Submit
     </ion-button>
+    <ion-button color="danger" expand="block" fill="clear" (click)="onDeleteCamera()">
+      Delete
+    </ion-button>
   </form>
 
 </ion-content>
