initial styling done, img onerror tag not fixed yet

--- a/Automation-App/src/app/components/camera/camera.component.html
+++ b/Automation-App/src/app/components/camera/camera.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card class="dashboard-card">
   <ion-card-header>
     <ion-toolbar>
       <ion-title>{{cameraData.name}}</ion-title>
