--- a/Automation-App/src/app/dashboard/cameras/cameras.page.html
+++ b/Automation-App/src/app/dashboard/cameras/cameras.page.html
@@ -1,10 +1,10 @@
 <ion-content>
-  <div>
+  <div class="content">
     <ion-toolbar>
-      <ion-title>Cameras</ion-title>
+      <h2>Cameras</h2>
       <ion-buttons slot="end">
         <ion-button color="primary" fill="clear" (click)="onCreateCamera()">
-          <ion-icon slot="end" name="add-outline"></ion-icon>
+          <ion-icon slot="end" name="add-outline" class="add-icon"></ion-icon>
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
