--- a/Automation-App/src/app/auth/auth.page.html
+++ b/Automation-App/src/app/auth/auth.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding> 
-  <p align="center"> <ion-img style="width: 100px;" src="assets/icon/logo1.jpg"></ion-img></p>
+  <p align="center"> <ion-img style="width: 200px;" src="assets/icon/hydroteklogo.png"></ion-img></p>
   <!--Start of the form.-->
   <form [formGroup]="formgroup" (ngSubmit)=onSubmit()>
     <!--Start of the grid.-->
