--- a/Automation-App/src/global.scss
+++ b/Automation-App/src/global.scss
@@ -28,3 +28,65 @@
 .ion-invalid.ion-touched ion-label{
     color : var(--ion-color-danger); //If we have ion-invalid and touched classes, the nested elements will turn red.
 }
+
+/*
+.group {//used in 5 components
+    margin-top: 20px;
+}
+
+.general_settings { //used in 2 pages
+    display: inline-block;
+}
+
+.add_button { //used in 3 pages
+    display: inline-block;
+}
+
+.button_col {//used in 3 pages
+    padding-top: 14px;
+}
+
+
+//TODO replace bottom w/ classes
+ion-content{ //app background
+    --background:linear-gradient(#2679B9 0%, #196097 15%, #003157 100%) !important;
+}
+
+h2, h6 {
+    color: white;
+    margin-left: 10px;
+    display: inline;
+}
+
+h3 { //used in 9 files in components
+    font-weight: 700;
+    color: black;
+    font-size: 150%;
+    margin-left: 10px;
+    margin-bottom: 0px;
+}
+
+//below: diff scss definitions exist for different components/pages
+ion-label { //used in 12 files in components and pages
+    font-size: 14px;
+    color: black; 
+    //TODO: grow-lights component, irrigation component, ph component, reservoir component do NOT have black color spec'd in scss
+    font-weight: 400;
+    margin: 10px;
+}
+
+ion-card-content { //used in 13 files in components and pages
+    padding-top: 5px; //TODO: this is majority usage, some other pages specify different params
+    padding-bottom: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.content {//used in 6 files for pages
+    padding-left: 10px; //TODO: multiple versions in 6 files
+    padding-right: 10px;
+}
+
+ion-col {//used in 18 files for pages and components
+    padding: 0px;//TODO: multiple versions, including text centering or just bottom padding
+}*/
