Commented out warnings page for beta

--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -10,9 +10,9 @@
 <ion-content padding>
   <ion-tabs>
     <ion-tab-bar color="primary" slot="top"> 
-      <ion-tab-button tab="warnings">
+      <!--<ion-tab-button tab="warnings">
         <ion-label class="tab-label">Warnings</ion-label>
-      </ion-tab-button>
+      </ion-tab-button>-->
       <ion-tab-button (click)="navigateToTab('monitoring')">
         <ion-label class="tab-label">Monitoring</ion-label>
       </ion-tab-button>
