--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-      <ion-title class="header">Dashboard</ion-title>
+      <ion-title class="header">{{title}}</ion-title>
   </ion-toolbar> 
 </ion-header>
 <!--Navigation from one tab to other tab-->
