--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -14,13 +14,13 @@
         <ion-label class="tab-label">Warnings</ion-label>
       </ion-tab-button>-->
       <ion-tab-button (click)="navigateToTab('monitoring')">
-        <ion-label class="tab-label">Monitoring</ion-label>
+        <ion-icon name="analytics-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button (click)="navigateToTab('control')">
-        <ion-label class="tab-label">Control</ion-label>
+        <ion-icon name="options-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button (click)="navigateToTab('cameras')">
-        <ion-label class="tab-label">Cameras</ion-label>
+        <ion-icon name="camera-outline"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar> 
   </ion-tabs>
