Made SCSS class .gradient_background and applied to HTML

--- a/Automation-App/src/app/create-cluster/create-cluster.page.html
+++ b/Automation-App/src/app/create-cluster/create-cluster.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="gradient_background">
   <div class="content">
     <form [formGroup]="clusterForm" (ngSubmit)="onSubmit()">
       <ion-grid>
