--- a/Automation-App/src/app/graphs/visualization/visualization.page.html
+++ b/Automation-App/src/app/graphs/visualization/visualization.page.html
@@ -41,7 +41,7 @@
   </div>
 </div> -->
 
-<ion-content>
+<ion-content class="gradient_background">
   <div>
     <div class="ion-padding">
       <ion-item>
