--- a/Automation-App/src/app/components/general-settings/general-settings.component.html
+++ b/Automation-App/src/app/components/general-settings/general-settings.component.html
@@ -6,7 +6,7 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">General Settings</h3>
+          <h3 fill="clear" class="color h3_sensor_title">General Settings</h3>
         </ion-item>
       </ion-row>
     
@@ -23,7 +23,7 @@
               </ion-col>
             </ion-row>
             
-            <h3>Reservoir Settings</h3>
+            <h3 class="h3_sensor_title">Reservoir Settings</h3>
             <ion-row>
               <ion-col size="12">
                 <ion-item>
