--- a/Automation-App/src/app/components/humidity/humidity.component.html
+++ b/Automation-App/src/app/components/humidity/humidity.component.html
@@ -6,7 +6,7 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">Humidity</h3>
+          <h3 fill="clear" class="color h3_sensor_title">Humidity</h3>
         </ion-item>
       </ion-row>
       <!--Card Content-->
@@ -26,7 +26,7 @@
   
           <div *ngIf="!humidityForm.get('monit_only').value" [formGroup]="controlForm"> 
  
-            <h3>Desired Value</h3>
+            <h3 class="h3_sensor_title">Desired Value</h3>
             <ion-row>
               <ion-item lines="none">
                 <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
@@ -55,7 +55,7 @@
                 </ion-item>
               </ion-col>
             </ion-row>
-            <h3>Power Outlets</h3>
+            <h3 class="h3_sensor_title">Power Outlets</h3>
             <ion-row>
               <ion-list>
                 <ion-item>
@@ -69,7 +69,7 @@
               </ion-list>
             </ion-row>
           </div>
-          <h3>Alarm Settings</h3>
+          <h3 class="h3_sensor_title">Alarm Settings</h3>
           <ion-row>
             <ion-col size="5">
               <ion-item>
