--- a/Automation-App/src/app/components/irrigation/irrigation.component.html
+++ b/Automation-App/src/app/components/irrigation/irrigation.component.html
@@ -6,14 +6,14 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">Irrigation</h3>
+          <h3 fill="clear" class="color h3_sensor_title">Irrigation</h3>
         </ion-item>
       </ion-row>
 
       <form [formGroup]="irrigationForm">
         <div *ngIf="isOpen">
         <hr color="grey" />
-        <h3>Power Outlets</h3>
+        <h3 class="h3_sensor_title">Power Outlets</h3>
           <ion-list>
             <ion-item lines="none">
               <ion-icon name="water-outline"></ion-icon>
@@ -21,7 +21,7 @@
               <ion-button slot="end" (click)="presentAddPowerOutletModal('Irrigation')">{{ isPowerOutletSetup('Irrigation')? "Edit": "Setup"}}</ion-button>
             </ion-item>
           </ion-list>
-          <h3>Irrigation Schedule</h3>
+          <h3 class="h3_sensor_title">Irrigation Schedule</h3>
           <ion-row> 
             <ion-col size="12">
               <ion-item>
