--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -6,7 +6,7 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">PH</h3>
+          <h3 fill="clear" class="color h3_sensor_title">PH</h3>
         </ion-item>
       </ion-row>
       <!--Card Content-->
@@ -23,7 +23,7 @@
   
           <div *ngIf="!phForm.get('monit_only').value" [formGroup]="controlForm">
             <div class="settings-group">
-              <h3>Dose Settings</h3>
+               <h3 class="h3_sensor_title">Dose Settings</h3>
               <ion-list>
                 <ion-item>
                   <ion-label position="floating">Dose Time</ion-label>
@@ -37,7 +37,7 @@
             </div>
             
             <div class="settings-group">
-              <h3>Pumps</h3>
+              <h3 class="h3_sensor_title">Pumps</h3>
               <ion-list>
                 <ion-item>
                   <ion-toggle slot="start" formControlName="up_ctrl"></ion-toggle>
@@ -51,7 +51,7 @@
             </div>
   
             <div class="settings-group">
-              <h3>Desired Value</h3>
+              <h3 class="h3_sensor_title">Desired Value</h3>
               <ion-row>
                 <ion-item lines="none">
                   <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="settings-group">
-            <h3>Alarm Settings</h3>
+            <h3 class="h3_sensor_title">Alarm Settings</h3>
             <ion-row>
               <ion-col size="5">
                 <ion-item>
