--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -5,7 +5,7 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
-          <h3 fill="clear" class="color">Reservoir</h3>
+          <h3 fill="clear" class="color h3_sensor_title">Reservoir</h3>
         </ion-item>
       </ion-row>
       <form [formGroup]="reservoirForm">
@@ -33,7 +33,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <h3>Power Outlets</h3>
+        <h3 class="h3_sensor_title">Power Outlets</h3>
         <ion-list>
           <ion-item lines="none">
             <ion-icon name="return-down-back-outline"></ion-icon>
