--- a/Automation-App/src/app/components/general-settings/general-settings.component.html
+++ b/Automation-App/src/app/components/general-settings/general-settings.component.html
@@ -17,7 +17,7 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Device Name</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Device Name</ion-label>
                   <ion-input formControlName="device_name"></ion-input>
                 </ion-item>
               </ion-col>
@@ -27,7 +27,7 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Reservoir Size</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
                   <ion-input formControlName="reserv_size" type="number"></ion-input>
                 </ion-item>
               </ion-col>
