--- a/Automation-App/src/app/components/humidity/humidity.component.html
+++ b/Automation-App/src/app/components/humidity/humidity.component.html
@@ -18,7 +18,7 @@
               <ion-col size="12">
                 <ion-item lines="none">
                   <ion-checkbox formControlName="monit_only" mode="md"></ion-checkbox>
-                  <ion-label>Monitoring Only</ion-label>
+                  <ion-label class="sensor_black_label">Monitoring Only</ion-label>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -30,19 +30,19 @@
             <ion-row>
               <ion-item lines="none">
                 <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
-                <ion-label>Different Targets for Day and Night</ion-label>
+                <ion-label class="sensor_black_label">Different Targets for Day and Night</ion-label>
               </ion-item>
             </ion-row>
             <ion-row *ngIf="controlForm.get('d_n_enabled').value">
               <ion-col size="6">
                 <ion-item>
-                  <ion-label position="floating">Day Target Value</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Day Target Value</ion-label>
                   <ion-input formControlName="day_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col size="6">
                 <ion-item>
-                  <ion-label position="floating">Night Target Value</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Night Target Value</ion-label>
                   <ion-input formControlName="night_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -50,7 +50,7 @@
             <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Target Value</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Target Value</ion-label>
                   <ion-input formControlName="tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -60,11 +60,11 @@
               <ion-list>
                 <ion-item>
                   <ion-toggle slot="start" formControlName="up_ctrl"></ion-toggle>
-                  <ion-label>Humidifier</ion-label>
+                  <ion-label class="sensor_black_label">Humidifier</ion-label>
                 </ion-item>
                 <ion-item>
                   <ion-toggle slot="start" formControlName="down_ctrl"></ion-toggle>
-                  <ion-label>Dehumidifier</ion-label>
+                  <ion-label class="sensor_black_label">Dehumidifier</ion-label>
                 </ion-item>
               </ion-list>
             </ion-row>
@@ -73,13 +73,13 @@
           <ion-row>
             <ion-col size="5">
               <ion-item>
-                <ion-label position="floating">Min</ion-label>
+                <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                 <ion-input formControlName="alarm_min" type="number"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col offset="1" size="5">
               <ion-item>
-                <ion-label position="floating">Max</ion-label>
+                <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                 <ion-input formControlName="alarm_max" type="number"></ion-input>
               </ion-item>
             </ion-col>
