--- a/Automation-App/src/app/create-cluster/create-cluster.page.html
+++ b/Automation-App/src/app/create-cluster/create-cluster.page.html
@@ -26,7 +26,7 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Cluster Name</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Cluster Name</ion-label>
                   <ion-input formControlName="cluster_name"></ion-input>
                 </ion-item>
               </ion-col>
