--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -18,7 +18,7 @@
               <ion-col size="12">
                 <ion-item lines="none">
                   <ion-checkbox formControlName="monit_only" mode="md"></ion-checkbox>
-                  <ion-label>Monitoring Only</ion-label>
+                  <ion-label class="sensor_black_label">Monitoring Only</ion-label>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -28,13 +28,13 @@
             <ion-row>
               <ion-col size="5">
                 <ion-item>
-                  <ion-label position="floating">Dosing Time</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
                   <ion-input formControlName="dose_time" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col offset="1" size="5">
                 <ion-item>
-                  <ion-label position="floating">Dosing Interval</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
                   <ion-input formControlName="dose_interv" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -44,27 +44,27 @@
             <div formGroupName="pumps">
               <ion-list>
                 <ion-item>
-                  <ion-label position="floating">Pump 1 Ratio</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Pump 1 Ratio</ion-label>
                   <ion-input formControlName="pump_1" type="number"></ion-input>
                 </ion-item>
   
                 <ion-item>
-                  <ion-label position="floating">Pump 2 Ratio</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Pump 2 Ratio</ion-label>
                   <ion-input formControlName="pump_2" type="number"></ion-input>
                 </ion-item>
   
                 <ion-item>
-                  <ion-label position="floating">Pump 3 Ratio</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Pump 3 Ratio</ion-label>
                   <ion-input formControlName="pump_3" type="number"></ion-input>
                 </ion-item>
   
                 <ion-item>
-                  <ion-label position="floating">Pump 4 Ratio</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Pump 4 Ratio</ion-label>
                   <ion-input formControlName="pump_4" type="number"></ion-input>
                 </ion-item>
   
                 <ion-item>
-                  <ion-label position="floating">Pump 5 Ratio</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Pump 5 Ratio</ion-label>
                   <ion-input formControlName="pump_5" type="number"></ion-input>
                 </ion-item>
               </ion-list>
@@ -74,19 +74,19 @@
             <ion-row>
               <ion-item lines="none">
                 <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
-                <ion-label>Different Targets for Day and Night</ion-label>
+                <ion-label class="sensor_black_label">Different Targets for Day and Night</ion-label>
               </ion-item>
             </ion-row>
             <ion-row *ngIf="controlForm.get('d_n_enabled').value">
               <ion-col size="6">
                 <ion-item>
-                  <ion-label position="floating">Day Target Value</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Day Target Value</ion-label>
                   <ion-input formControlName="day_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col size="6">
                 <ion-item>
-                  <ion-label position="floating">Night Target Value</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Night Target Value</ion-label>
                   <ion-input formControlName="night_tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -94,7 +94,7 @@
             <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Target Value</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Target Value</ion-label>
                   <ion-input formControlName="tgt" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -105,13 +105,13 @@
             <ion-row>
               <ion-col size="5">
                 <ion-item>
-                  <ion-label position="floating">Min</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Min</ion-label>
                   <ion-input formControlName="alarm_min" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col offset="1" size="5">
                 <ion-item>
-                  <ion-label position="floating">Max</ion-label>
+                  <ion-label position="floating" class="sensor_black_label">Max</ion-label>
                   <ion-input formControlName="alarm_max" type="number"></ion-input>
                 </ion-item>
               </ion-col>
