--- a/Automation-App/src/app/components/grow-lights/grow-lights.component.html
+++ b/Automation-App/src/app/components/grow-lights/grow-lights.component.html
@@ -17,7 +17,7 @@
           <ion-row> 
             <ion-col size="12">
               <ion-item>
-                <ion-label position="floating">Lights On</ion-label>
+                <ion-label  class="sensor_black_label" position="floating">Lights On</ion-label>
                 <ion-datetime displayFormat="h:mm a" placeholder="Select Time" formControlName="lights_on"></ion-datetime>
               </ion-item>
             </ion-col>
@@ -25,7 +25,7 @@
           <ion-row> 
             <ion-col size="12">
               <ion-item>
-                <ion-label position="floating">Lights Off</ion-label>
+                <ion-label class="sensor_black_label" position="floating">Lights Off</ion-label>
                 <ion-datetime displayFormat="h:mm a" placeholder="Select Time" formControlName="lights_off"></ion-datetime>
               </ion-item>
             </ion-col>
@@ -40,13 +40,13 @@
                 <ion-item [formGroupName]="i">
                   <ion-toggle slot="start" formControlName="is_control" (click)="onOutletToggleChange('Grow Light ' + (i + 1), i)"></ion-toggle>
                   <ion-icon name="sunny-outline"></ion-icon>
-                  <ion-label>Grow Light {{ (i + 1) }}</ion-label>
+                  <ion-label class="sensor_black_label">Grow Light {{ (i + 1) }}</ion-label>
                   <ion-button slot="end" (click)="presentAddPowerOutletModal('Grow Light ' + (i + 1))">{{ isPowerOutletSetup('Grow Light ' + (i + 1))? "Edit": "Setup"}}</ion-button>
                 </ion-item>
               </div>
             </ion-list>
             <div *ngIf="powerOutletsArray.length == 0">
-              <ion-label>Click the Add button to Setup a New Power Outlet</ion-label>
+              <ion-label class="sensor_black_label">Click the Add button to Setup a New Power Outlet</ion-label>
             </div>
           </div>
         </div>
