--- a/Automation-App/src/app/components/irrigation/irrigation.component.html
+++ b/Automation-App/src/app/components/irrigation/irrigation.component.html
@@ -17,7 +17,7 @@
           <ion-list>
             <ion-item lines="none">
               <ion-icon name="water-outline"></ion-icon>
-              <ion-label>Irrigation Pump</ion-label>
+              <ion-label class="sensor_black_label">Irrigation Pump</ion-label>
               <ion-button slot="end" (click)="presentAddPowerOutletModal('Irrigation')">{{ isPowerOutletSetup('Irrigation')? "Edit": "Setup"}}</ion-button>
             </ion-item>
           </ion-list>
@@ -25,7 +25,7 @@
           <ion-row> 
             <ion-col size="12">
               <ion-item>
-                <ion-label position="floating">Irrigation On</ion-label>
+                <ion-label class="sensor_black_label" position="floating">Irrigation On</ion-label>
                 <ion-input type="number" placeholder="On Interval" formControlName="on_interval"></ion-input>
               </ion-item>
             </ion-col>
@@ -33,7 +33,7 @@
           <ion-row> 
             <ion-col size="12">
               <ion-item>
-                <ion-label position="floating">Irrigation Off</ion-label>
+                <ion-label class="sensor_black_label" position="floating">Irrigation Off</ion-label>
                 <ion-input type="number" placeholder="Off Interval" formControlName="off_interval"></ion-input>
               </ion-item>
             </ion-col>
