--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -16,7 +16,7 @@
           <div class="group">
             <ion-item lines="none">
               <ion-checkbox formControlName="monit_only" mode="md" slot="end"></ion-checkbox>
-              <ion-label>Monitoring Only</ion-label>
+              <ion-label class="sensor_black_label">Monitoring Only</ion-label>
             </ion-item>
             <hr color="grey"/>
           </div>
@@ -26,11 +26,11 @@
                <h3 class="h3_sensor_title">Dose Settings</h3>
               <ion-list>
                 <ion-item>
-                  <ion-label position="floating">Dose Time</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Dose Time</ion-label>
                   <ion-input formControlName="dose_time" type="number"></ion-input>
                 </ion-item>
                 <ion-item>
-                  <ion-label position="floating">Dosing Interval</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Dosing Interval</ion-label>
                   <ion-input formControlName="dose_interv" type="number"></ion-input>
                 </ion-item>
               </ion-list>  
@@ -41,11 +41,11 @@
               <ion-list>
                 <ion-item>
                   <ion-toggle slot="start" formControlName="up_ctrl"></ion-toggle>
-                  <ion-label>pH Up</ion-label>
+                  <ion-label class="sensor_black_label">pH Up</ion-label>
                 </ion-item>
                 <ion-item>
                   <ion-toggle slot="start" formControlName="down_ctrl"></ion-toggle>
-                  <ion-label>pH Down</ion-label>
+                  <ion-label class="sensor_black_label">pH Down</ion-label>
                 </ion-item>
               </ion-list>
             </div>
@@ -55,19 +55,19 @@
               <ion-row>
                 <ion-item lines="none">
                   <ion-checkbox formControlName="d_n_enabled" mode="md"></ion-checkbox>
-                  <ion-label >Different Targets for Day and Night</ion-label>
+                  <ion-label class="sensor_black_label" >Different Targets for Day and Night</ion-label>
                 </ion-item>
               </ion-row>
               <ion-row *ngIf="controlForm.get('d_n_enabled').value">
                 <ion-col size="4">
                   <ion-item>
-                    <ion-label position="floating">Day Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Day Target</ion-label>
                     <ion-input formControlName="day_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col offset="2" size="4">
                   <ion-item>
-                    <ion-label position="floating">Night Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Night Target</ion-label>
                     <ion-input formControlName="night_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
@@ -75,7 +75,7 @@
               <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
                 <ion-col size="12">
                   <ion-item>
-                    <ion-label position="floating">Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Target</ion-label>
                     <ion-input formControlName="tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
@@ -87,13 +87,13 @@
             <ion-row>
               <ion-col size="5">
                 <ion-item>
-                  <ion-label position="floating">Min</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                   <ion-input formControlName="alarm_min" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col offset="1" size="5">
                 <ion-item>
-                  <ion-label position="floating">Max</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                   <ion-input formControlName="alarm_max" type="number"></ion-input>
                 </ion-item>
               </ion-col>
