--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -14,13 +14,13 @@
         <ion-row>
           <ion-item lines="none">
             <ion-toggle slot="start" formControlName="is_control"></ion-toggle>
-            <ion-label>Water Replacement Enabled</ion-label>
+            <ion-label class="sensor_black_label">Water Replacement Enabled</ion-label>
           </ion-item>
         </ion-row>
         <ion-row>
           <ion-col size="12">
             <ion-item>
-              <ion-label position="floating">Reservoir Size</ion-label>
+              <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
               <ion-input formControlName="reservoir_size" type="number"></ion-input>
             </ion-item>
           </ion-col>
@@ -28,7 +28,7 @@
         <ion-row>
           <ion-col size="12">
             <ion-item>
-              <ion-label position="floating">Replacement Interval</ion-label>
+              <ion-label class="sensor_black_label" position="floating">Replacement Interval</ion-label>
               <ion-input formControlName="water_replacement_interval" type="number"></ion-input>
             </ion-item>
           </ion-col>
@@ -37,12 +37,12 @@
         <ion-list>
           <ion-item lines="none">
             <ion-icon name="return-down-back-outline"></ion-icon>
-            <ion-label>Water In</ion-label>
+            <ion-label class="sensor_black_label">Water In</ion-label>
             <ion-button slot="end" (click)="presentAddPowerOutletModal('Reservoir Water In')">{{ isPowerOutletSetup('Reservoir Water In')? "Edit": "Setup"}}</ion-button>
           </ion-item>
           <ion-item lines="none">
             <ion-icon name="return-down-forward-outline"></ion-icon>
-            <ion-label>Water Out</ion-label>
+            <ion-label class="sensor_black_label">Water Out</ion-label>
             <ion-button slot="end" (click)="presentAddPowerOutletModal('Reservoir Water Out')">{{ isPowerOutletSetup('Reservoir Water Out')? "Edit": "Setup"}}</ion-button>
           </ion-item>
         </ion-list>
